# shopman-offerman

./: README.md  offerman_test_settings.py  pyproject.toml
shopman/offerman/: __init__.py  apps.py  conf.py  exceptions.py  service.py
shopman/offerman/adapters/: __init__.py  catalog_backend.py  noop.py  product_info.py  sku_validator.py
shopman/offerman/admin/: __init__.py  collection.py  listing.py  product.py
shopman/offerman/api/: filters.py  serializers.py  urls.py  views.py
shopman/offerman/contrib/: __init__.py
shopman/offerman/contrib/admin_unfold/: __init__.py  admin.py  apps.py  resources.py
shopman/offerman/contrib/import_export/: __init__.py  apps.py  resources.py
shopman/offerman/contrib/suggestions/: __init__.py  suggestions.py
shopman/offerman/migrations/: 0001_initial.py
shopman/offerman/models/: __init__.py  collection.py  listing.py  product.py  product_component.py
shopman/offerman/protocols/: __init__.py  catalog.py  cost.py
shopman/offerman/signals/: __init__.py
shopman/offerman/tests/: __init__.py  conftest.py  test_api.py  test_hardening.py  test_import_export.py  test_models.py  test_service.py  test_v2.py  urls.py
