[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shopman-offerman"
version = "0.3.0"
description = "Shopman Offerman — Product Catalog"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "django-taggit>=5.0",
    "django-simple-history>=3.4",
]

[project.optional-dependencies]
api = [
    "djangorestframework>=3.14",
    "django-filter>=23.0",
]
import_export = [
    "django-import-export>=3.3",
]
unfold = [
    "django-unfold>=0.20",
    "django-import-export>=3.3",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "djangorestframework>=3.14",
    "django-filter>=23.0",
    "django-import-export>=3.3",
]

[tool.setuptools.packages.find]
include = ["shopman.offerman*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "offerman_test_settings"
pythonpath = ["."]
